--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.0-beta.3",
+    "@apollo/experimental-nextjs-app-support": "^0.2.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
-    "next": "13.4.5",
+    "graphql": "^16.6.0",
+    "graphql-ws": "^5.13.1",
+    "next": "^13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
