--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "next": "^13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind": "^4.0.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
