--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwind": "^4.0.0",
     "typescript": "5.1.3"
   },
