--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.1",
+    "react-swipeable-views": "^0.14.0",
     "tailwind": "^4.0.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/react-swipeable-views": "^0.13.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
