--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.1",
     "react-swipeable-views": "^0.14.0",
+    "react-tabs": "^6.0.1",
     "tailwind": "^4.0.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@types/react-swipeable-views": "^0.13.2",
+    "@types/react-tabs": "^5.0.5",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
