--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.12",
     "@types/react-swipeable-views": "^0.13.2",
     "@types/react-tabs": "^5.0.5",
     "autoprefixer": "^10.4.14",
