--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.9",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "graphql": "^16.6.0",
