--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.0-beta.3",
+    "@apollo/client": "^3.8.0",
     "@apollo/experimental-nextjs-app-support": "^0.2.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@types/recoil": "^0.0.9",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "eslint": "8.42.0",
@@ -27,6 +28,7 @@
     "react-intersection-observer": "^9.5.1",
     "react-swipeable-views": "^0.14.0",
     "react-tabs": "^6.0.1",
+    "recoil": "^0.7.7",
     "tailwind": "^4.0.0",
     "typescript": "5.1.3"
   },
