--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-tabs": "^5.0.5",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
+    "prettier": "3.0.1",
     "tailwindcss": "^3.3.2"
   }
 }
