--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,9 @@
 {
-  "printWidth": 100,
-  "semi": false,
-  "singleQuote": true
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false, 
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "arrowParens": "avoid"
 }
