--- a/package.json
+++ b/package.json
@@ -14,27 +14,36 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@types/react-infinite-scroller": "1.2.4",
     "@types/recoil": "^0.0.9",
+    "@types/validator": "13.11.3",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
+    "email-validator": "2.0.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.13.1",
+    "nanoid": "5.0.1",
     "next": "^13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-infinite-scroller": "1.2.6",
     "react-intersection-observer": "^9.5.1",
+    "react-loader-spinner": "5.4.5",
     "react-swipeable-views": "^0.14.0",
     "react-tabs": "^6.0.1",
     "recoil": "^0.7.7",
+    "styled-components": "6.0.7",
     "tailwind": "^4.0.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "validator": "13.11.0"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.12",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "4.14.200",
     "@types/react-swipeable-views": "^0.13.2",
     "@types/react-tabs": "^5.0.5",
     "autoprefixer": "^10.4.14",
