--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/lib/apollo-wrapper.js",
+    "src/libs/apollo-wrapper.js",
     "src/components"
   ],
   "exclude": ["node_modules"]
