--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-tabs": "^6.0.1",
     "recoil": "^0.7.7",
     "tailwind": "^4.0.0",
+    "tailwind-scrollbar-hide": "1.1.7",
     "typescript": "5.1.3"
   },
   "devDependencies": {
