--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.5",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.13.1",
+    "lottie-react": "2.4.0",
     "nanoid": "5.0.3",
     "next": "^13.4.5",
     "react": "18.2.0",
