--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@apollo/client": "^3.8.0",
     "@apollo/experimental-nextjs-app-support": "^0.2.1",
+    "@svgr/webpack": "8.1.0",
     "@types/lodash": "4.14.201",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@types/react-scroll": "1.8.10",
     "@types/recoil": "^0.0.9",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
@@ -30,9 +32,11 @@
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.1",
     "react-router-dom": "6.19.0",
+    "react-scroll": "1.9.0",
     "react-swipeable-views": "^0.14.0",
     "react-tabs": "^6.0.1",
     "recoil": "^0.7.7",
+    "styled-components": "6.1.1",
     "tailwind": "^4.0.0",
     "tailwind-scrollbar-hide": "1.1.7",
     "typescript": "5.1.3"
