--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "tailwindcss": "^3.3.2"
   },
   "engines": {
-    "node": "^18.10.0"
+    "node": "18.10.0"
   },
   "packageManager": "^pnpm@8.12.0"
 }
