chore: add mock start

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:mock": "API_MOCKING='enable' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
