chore: update main color

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "theme_color": "#0056b3",
+  "theme_color": "#9EF22E",
   "background_color": "#0056b3",
   "display": "standalone",
   "scope": "/",
