--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,13 @@ yarn-error.log*
 next-env.d.ts
 
 # pwa
-public/sw.js
-public/workbox-*.js
+**/public/precache.*.*.js
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/fallback-*.js
+**/public/precache.*.*.js.map
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
+**/public/fallback-*.js
