--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:mock": "NEXT_PUBLIC_API_MOCKING=enable next dev",
-    "generate:svg-component": "npx @svgr/cli --jsx-runtime=automatic --out-dir src/components/common/icons --typescript -- public/assets",
+    "generate:svg-component": "npx @svgr/cli --jsx-runtime=automatic --out-dir src/components/common/icons --typescript -- src/assets/icons",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
