--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "tailwindcss": "^3.3.2"
   },
   "engines": {
-    "node": "18.17.0"
+    "node": ">=18.17.0"
   },
   "packageManager": "^pnpm@8.12.0",
   "msw": {
