--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "generate:svg-component": "npx @svgr/cli --jsx-runtime=automatic --out-dir src/components/common/icons --typescript -- src/assets/icons",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@apollo/client": "^3.8.0",
@@ -41,16 +43,26 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.6",
+    "@storybook/addon-interactions": "^7.6.6",
+    "@storybook/addon-links": "^7.6.6",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.6",
+    "@storybook/nextjs": "^7.6.6",
+    "@storybook/react": "^7.6.6",
+    "@storybook/test": "^7.6.6",
     "@svgr/cli": "^8.1.0",
     "@types/gtag.js": "^0.0.12",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/react-swipeable-views": "^0.13.2",
     "@types/react-tabs": "^5.0.5",
     "autoprefixer": "^10.4.14",
+    "eslint-plugin-storybook": "^0.6.15",
     "msw": "^2.0.11",
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.24",
     "prettier": "3.0.1",
+    "storybook": "^7.6.6",
     "tailwindcss": "^3.3.2"
   },
   "engines": {
