--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/react-swipeable-views": "^0.13.2",
     "@types/react-tabs": "^5.0.5",
     "autoprefixer": "^10.4.14",
+    "clsx": "^2.0.0",
     "eslint-plugin-storybook": "^0.6.15",
     "msw": "^2.0.11",
     "next-pwa": "^5.6.0",
