--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.2.5",
     "@types/react-scroll": "1.8.10",
     "@types/recoil": "^0.0.9",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "eslint": "8.42.0",
@@ -39,6 +40,7 @@
     "react-tabs": "^6.0.1",
     "recoil": "^0.7.7",
     "tailwind": "^4.0.0",
+    "tailwind-merge": "^2.2.0",
     "tailwind-scrollbar-hide": "1.1.7",
     "typescript": "5.1.3"
   },
@@ -57,7 +59,6 @@
     "@types/react-swipeable-views": "^0.13.2",
     "@types/react-tabs": "^5.0.5",
     "autoprefixer": "^10.4.14",
-    "clsx": "^2.0.0",
     "eslint-plugin-storybook": "^0.6.15",
     "msw": "^2.0.11",
     "next-pwa": "^5.6.0",
