--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:mock": "NEXT_PUBLIC_API_MOCKING=enable next dev",
+    "dev:mock": "concurrently --kill-others  \"NEXT_PUBLIC_API_MOCKING=enable next dev\" \"npx tsx watch ./src/mocks/http.ts\"",
     "generate:svg-component": "npx @svgr/cli --jsx-runtime=automatic --out-dir src/components/common/icons --typescript -- src/assets/icons",
     "build": "next build",
     "start": "next start",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.0",
     "@apollo/experimental-nextjs-app-support": "^0.2.1",
+    "@mswjs/http-middleware": "^0.9.2",
     "@types/lodash": "4.14.201",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -54,13 +55,16 @@
     "@storybook/react": "^7.6.6",
     "@storybook/test": "^7.6.6",
     "@svgr/cli": "^8.1.0",
+    "@types/express": "^4.17.21",
     "@types/gtag.js": "^0.0.12",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/react-swipeable-views": "^0.13.2",
     "@types/react-tabs": "^5.0.5",
     "autoprefixer": "^10.4.14",
     "clsx": "^2.0.0",
+    "concurrently": "^8.2.2",
     "eslint-plugin-storybook": "^0.6.15",
+    "express": "^4.18.2",
     "msw": "^2.0.11",
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.24",
