--- a/.github/workflows/deploy-web-staging.yml
+++ b/.github/workflows/deploy-web-staging.yml
@@ -1,19 +1,15 @@
-name: deploy-web-production
+name: deploy-web-staging
 
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_WEB_PROD_PROJECT_ID }}
 
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - '*' # 임시
+  pull_request:
 
 jobs:
-  job_deploy_production:
-    name: Deploy to Production
+  job_deploy_staging:
+    name: Deploy to Staging
     runs-on: ubuntu-latest
 
     steps:
@@ -32,10 +28,10 @@ jobs:
         run: npm install --global vercel@latest
 
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build Project Artifacts
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
