--- a/.github/workflows/deploy-web-staging.yml
+++ b/.github/workflows/deploy-web-staging.yml
@@ -5,7 +5,9 @@ env:
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_WEB_PROD_PROJECT_ID }}
 
 on:
-  pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
   job_deploy_staging:
