--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "13.4.5",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.13.1",
+    "jsonwebtoken": "^9.0.2",
     "lottie-react": "2.4.0",
     "next": "^13.4.5",
     "react": "18.2.0",
