--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.24",
     "prettier": "3.0.1",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "storybook": "^7.6.6",
     "tailwindcss": "^3.4.1"
   },
