--- a/package.json
+++ b/package.json
@@ -17,66 +17,64 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
-    "@apollo/client": "^3.8.8",
-    "@apollo/experimental-nextjs-app-support": "^0.6.0",
-    "@types/lodash": "4.14.201",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "@types/react-scroll": "1.8.10",
-    "@types/recoil": "^0.0.9",
+    "@apollo/client": "^3.9.5",
+    "@apollo/experimental-nextjs-app-support": "^0.8.0",
     "class-variance-authority": "^0.7.0",
-    "classnames": "^2.3.2",
-    "dayjs": "^1.11.9",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
-    "graphql": "^16.6.0",
-    "graphql-ws": "^5.13.1",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.10",
+    "graphql": "^16.8.1",
+    "graphql-ws": "^5.15.0",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "2.4.0",
-    "next": "^13.4.5",
+    "next": "^14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "react-intersection-observer": "^9.5.1",
-    "react-router-dom": "6.19.0",
+    "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
+    "react-router-dom": "^6.22.1",
     "react-scroll": "1.9.0",
     "react-swipeable-views": "^0.14.0",
-    "react-tabs": "^6.0.1",
+    "react-tabs": "^6.0.2",
     "recoil": "^0.7.7",
-    "tailwind-merge": "^2.2.0",
-    "tailwind-scrollbar-hide": "1.1.7",
-    "typescript": "5.1.3"
+    "tailwind-merge": "^2.2.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.0",
     "@mswjs/http-middleware": "^0.9.2",
-    "@storybook/addon-essentials": "^7.6.6",
-    "@storybook/addon-interactions": "^7.6.6",
-    "@storybook/addon-links": "^7.6.6",
-    "@storybook/addon-onboarding": "^1.0.10",
-    "@storybook/blocks": "^7.6.6",
-    "@storybook/nextjs": "^7.6.6",
-    "@storybook/react": "^7.6.6",
-    "@storybook/test": "^7.6.6",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/nextjs": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/test": "^7.6.17",
     "@svgr/cli": "^8.1.0",
     "@types/express": "^4.17.21",
-    "@types/gtag.js": "^0.0.12",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/react-swipeable-views": "^0.13.2",
-    "@types/react-tabs": "^5.0.5",
-    "autoprefixer": "^10.4.14",
-    "clsx": "^2.0.0",
+    "@types/gtag.js": "^0.0.19",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.20",
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
+    "@types/react-scroll": "^1.8.10",
+    "@types/react-swipeable-views": "^0.13.5",
+    "autoprefixer": "^10.4.17",
+    "clsx": "^2.1.0",
     "concurrently": "^8.2.2",
-    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-storybook": "^0.8.0",
     "express": "^4.18.2",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.2.0",
-    "msw": "^2.0.11",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "msw": "^2.2.1",
     "next-pwa": "^5.6.0",
-    "postcss": "^8.4.24",
-    "prettier": "3.0.1",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "storybook": "^7.6.6",
+    "storybook": "^7.6.17",
     "tailwindcss": "^3.4.1"
   },
   "engines": {
