--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
+    "firebase": "^10.8.1",
     "graphql": "^16.8.1",
     "graphql-ws": "^5.15.0",
     "jsonwebtoken": "^9.0.2",
@@ -41,8 +42,6 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.0",
     "@mswjs/http-middleware": "^0.9.2",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-interactions": "^7.6.17",
@@ -65,6 +64,8 @@
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.0",
     "concurrently": "^8.2.2",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.0",
     "eslint-plugin-storybook": "^0.8.0",
     "express": "^4.18.2",
     "husky": "^9.0.11",
