--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "graphql-ws": "^5.15.0",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "2.4.0",
+    "mixpanel-browser": "^2.50.0",
     "next": "^14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -59,6 +60,7 @@
     "@types/gtag.js": "^0.0.19",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
+    "@types/mixpanel-browser": "^2.49.0",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
