--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "graphql": "^16.8.1",
     "graphql-ws": "^5.15.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lottie-react": "2.4.0",
     "mixpanel-browser": "^2.50.0",
     "next": "^14.1.0",
