--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.4",
+    "@apollo/experimental-nextjs-app-support": "^0.11.0",
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
+    "graphql": "^16.8.1",
     "jsvectormap": "^1.5.3",
     "next": "14.1.0",
     "react": "^18",
