--- a/deploy/development/Dockerfile
+++ b/deploy/development/Dockerfile
@@ -1,5 +1,5 @@
 # 1. 환경 설정 및 의존성 설치
-FROM node:18-alpine AS base
+FROM --platform=linux/amd64 node:18-alpine AS base
 
 # 1. Install dependencies only when needed
 FROM base AS deps
