--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jirum-alarm-frontend",
-  "version": "0.1.0",
+  "name": "web",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,9 +12,7 @@
     "prettier-fix": "prettier --write \"./**/*.{js,ts,tsx}\" --ignore-path .gitignore --ignore-path .prettierignore ",
     "ts-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@apollo/client": "^3.9.5",
@@ -85,10 +83,6 @@
     "storybook": "^7.6.17",
     "tailwindcss": "^3.4.1"
   },
-  "engines": {
-    "node": ">=18.17.0"
-  },
-  "packageManager": "^pnpm@8.12.0",
   "msw": {
     "workerDirectory": "public"
   }
