--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint-staged": "^15.2.2"
   },
   "engines": {
-    "node": ">=v20.14.0"
+    "node": "v20.14.0"
   },
   "packageManager": "pnpm@9.2.0"
 }
