--- a/.github/workflows/deploy-web-prod.yml
+++ b/.github/workflows/deploy-web-prod.yml
@@ -17,9 +17,11 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
+
       - uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: 9
+
       - name: Use Node.js 20
         uses: actions/setup-node@v3
         with:
@@ -27,7 +29,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+        run: pnpm install --global vercel@latest
 
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
