--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@apollo/experimental-nextjs-app-support": "^0.11.0",
+    "@tanstack/react-virtual": "^3.5.1",
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
     "graphql": "^16.8.1",
