--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.10.3"
   },
   "devDependencies": {
     "@types/node": "^20",
