--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "free-nextjs-admin-dashboard",
-  "version": "1.3.1",
+  "name": "admin",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
