--- a/.github/workflows/deploy-admin-prod.yml
+++ b/.github/workflows/deploy-admin-prod.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Build Image & Push Image
         run: |
-          docker build -t $DOCKER_REGISTRY/$DOCKER_REPOSITORY:$IMAGE_TAG -f apps/admin/deploy/production/Dockerfile .
+          docker build -t $DOCKER_REGISTRY/$DOCKER_REPOSITORY:$IMAGE_TAG -f apps/admin/deploy/production/Dockerfile apps/admin
           docker tag $DOCKER_REGISTRY/$DOCKER_REPOSITORY:$IMAGE_TAG $DOCKER_REGISTRY/$DOCKER_REPOSITORY:production
           docker push $DOCKER_REGISTRY/$DOCKER_REPOSITORY:$IMAGE_TAG
           docker push $DOCKER_REGISTRY/$DOCKER_REPOSITORY:production
