--- a/apps/admin/deploy/development/Dockerfile
+++ b/apps/admin/deploy/development/Dockerfile
@@ -8,7 +8,8 @@ WORKDIR /app
 # Replace <your-major-version> with the major version installed in your repository. For example:
 # RUN yarn global add turbo@^2
 # Install pnpm and Turbo globally using corepack to enable pnpm
-RUN /bin/sh -c corepack enable && corepack prepare pnpm@latest --activate && pnpm add -g turbo@^2
+RUN corepack enable && corepack prepare pnpm@latest --activate
+RUN pnpm add -g turbo@^2
 
 COPY . .
  
