--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,6 +15,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.11.0",
     "@tanstack/react-virtual": "^3.5.1",
     "apexcharts": "^3.45.2",
+    "dayjs": "^1.11.10",
     "flatpickr": "^4.6.13",
     "graphql": "^16.8.1",
     "next": "14.2.4",
