--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,8 @@
     "lottie-react": "2.4.0",
     "mixpanel-browser": "^2.50.0",
     "next": "^14.1.0",
+    "posthog-js": "^1.147.0",
+    "posthog-node": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
