chore: fix eslint setting

--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -1,60 +1,3 @@
 {
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "project": "./tsconfig.json",
-    "sourceType": "module"
-  },
-  "settings": {
-    "import/parsers": {
-      "@typescript-eslint/parser": [".ts", ".tsx"]
-    },
-    "import/resolver": {
-      "typescript": {}
-    }
-  },
-  "plugins": ["@typescript-eslint", "unused-imports", "sort-class-members"],
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:storybook/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:import/typescript",
-    "plugin:import/recommended",
-    "plugin:promise/recommended"
-  ],
-  "root": true,
-  "env": {
-    "browser": true,
-    "node": true,
-    "jest": true
-  },
-  "rules": {
-    "@typescript-eslint/interface-name-prefix": "off",
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/no-unused-expressions": "off",
-    "import/named": "off",
-    "import/no-named-as-default": "off",
-    "import/no-named-as-default-member": "off",
-    "import/newline-after-import": "off",
-    "import/no-duplicates": "off",
-    "import/first": "off",
-    "import/order": "off",
-    "lines-between-class-members": "off",
-    "no-console": "off",
-    "unused-imports/no-unused-imports": "warn",
-    "react-hooks/exhaustive-deps": "warn",
-    "prefer-rest-params": "warn",
-    "promise/always-return": "warn"
-  },
-  "overrides": [
-    {
-      "files": ["error-messages.ts", "exceptions.ts"],
-      "rules": {
-        "lines-between-class-members": "off",
-        "sort-class-members/sort-class-members": "off"
-      }
-    }
-  ]
+  "extends": ["next/core-web-vitals", "plugin:storybook/recommended"]
 }
