--- a/apps/web/deploy/production/Dockerfile
+++ b/apps/web/deploy/production/Dockerfile
@@ -1,4 +1,7 @@
-FROM --platform=linux/amd64 node:18-alpine AS alpine
+
+ARG NODE_VERSION=20.11
+
+FROM --platform=linux/amd64 node:${NODE_VERSION}-alpine AS alpine
 
 # setup pnpm on the alpine base
 FROM alpine as base
@@ -15,8 +18,8 @@ RUN apk add --no-cache libc6-compat
 WORKDIR /app
 COPY . .
 # Generate a partial monorepo with a pruned lockfile for a target workspace.
-# Assuming "admin" is the name entered in the project's package.json: { name: "admin" }
-RUN turbo prune admin --docker
+# Assuming "web" is the name entered in the project's package.json: { name: "web" }
+RUN turbo prune web --docker
  
 # Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
@@ -32,7 +35,7 @@ RUN pnpm install
  
 # Build the project
 COPY --from=builder /app/out/full/ .
-RUN pnpm turbo run build --filter=admin...
+RUN pnpm turbo run build --filter=web...
  
 FROM base AS runner
 WORKDIR /app
@@ -44,13 +47,13 @@ RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 USER nextjs
  
-COPY --from=installer /app/apps/admin/next.config.mjs .
-COPY --from=installer /app/apps/admin/package.json .
+COPY --from=installer /app/apps/web/next.config.js .
+COPY --from=installer /app/apps/web/package.json .
  
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=installer --chown=nextjs:nodejs /app/apps/admin/.next/standalone ./
-COPY --from=installer --chown=nextjs:nodejs /app/apps/admin/.next/static ./apps/admin/.next/static
-COPY --from=installer --chown=nextjs:nodejs /app/apps/admin/public ./apps/admin/public
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/static ./apps/web/.next/static
+COPY --from=installer --chown=nextjs:nodejs /app/apps/web/public ./apps/web/public
  
-CMD node apps/admin/server.js
+CMD node apps/web/server.js
