--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@apollo/client": "^3.9.5",
     "@apollo/experimental-nextjs-app-support": "^0.11.2",
     "@sentry/nextjs": "^7.105.0",
+    "@sentry/utils": "^8.33.1",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-next-experimental": "^5.51.23",
     "@vercel/speed-insights": "^1.0.11",
