--- a/apps/admin/deploy/production/Dockerfile
+++ b/apps/admin/deploy/production/Dockerfile
@@ -28,7 +28,7 @@ WORKDIR /app
 COPY .gitignore .gitignore
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
-RUN pnpm install
+RUN pnpm install --filter=admin
  
 # Build the project
 COPY --from=builder /app/out/full/ .
