--- a/apps/web/deploy/production/Dockerfile
+++ b/apps/web/deploy/production/Dockerfile
@@ -31,7 +31,7 @@ WORKDIR /app
 COPY .gitignore .gitignore
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
-RUN pnpm install
+RUN pnpm install --filter=web
  
 # Build the project
 COPY --from=builder /app/out/full/ .
@@ -56,4 +56,4 @@ COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/standalone ./
 COPY --from=installer --chown=nextjs:nodejs /app/apps/web/.next/static ./apps/web/.next/static
 COPY --from=installer --chown=nextjs:nodejs /app/apps/web/public ./apps/web/public
  
-CMD node apps/web/server.js
+CMD node /app/apps/web/server.js
