chore(web): 웹 프로젝트 도커라이징 (#236)
* wip: dockerizing

* fix: admin dockerizing

* feat: web project dockerizing

* fix: dockerizing

* chore: remove VERCEL_ENV & NEXT_PUBLIC_VERCEL_ENV

* fix: Dockerfile

* fix: remove --prefer-frozen-lockfile

* fix: run command

---------

Co-authored-by: tjsry0466 <tjs0466@naver.com>

--- a/apps/admin/deploy/development/docker-compose.yml
+++ b/apps/admin/deploy/development/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 services:
   jirum-alarm-admin-development:
     build:
-      context: ../../
-      dockerfile: docker/development/Dockerfile
+      context: ../../../../
+      dockerfile: apps/admin/deploy/development/Dockerfile
     image: jirum-alarm-admin-development
     ports:
       - '3001:3000'
