--- a/apps/admin/deploy/development/Dockerfile
+++ b/apps/admin/deploy/development/Dockerfile
@@ -1,56 +1,74 @@
-FROM --platform=linux/amd64 node:18-alpine AS alpine
+# We run this file from the root directory (see docker:build:next command in package.json)
 
-# setup pnpm on the alpine base
-FROM alpine as base
-ENV PNPM_HOME="/pnpm"
-ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
-RUN pnpm install turbo@^2 --global
+ARG APP_DIRNAME=admin
+ARG PROJECT=admin
+ARG NODE_VERSION=20.11
 
-FROM base AS builder
+# 1. Alpine image
+FROM node:${NODE_VERSION}-alpine AS alpine
 RUN apk update
 RUN apk add --no-cache libc6-compat
 
-# Set working directory
+# Setup pnpm and turbo on the alpine base
+FROM alpine as base
+RUN corepack enable
+RUN npm install turbo --global
+RUN pnpm config set store-dir ~/.pnpm-store
+
+# 2. Prune projects
+FROM base AS pruner
+ARG PROJECT
+
 WORKDIR /app
 COPY . .
-# Generate a partial monorepo with a pruned lockfile for a target workspace.
-# Assuming "admin" is the name entered in the project's package.json: { name: "admin" }
-RUN turbo prune admin --docker
- 
-# Add lockfile and package.json's of isolated subworkspace
-FROM base AS installer
-RUN apk update
-RUN apk add --no-cache libc6-compat
+RUN turbo prune --scope=${PROJECT} --docker
+
+# 3. Build the project
+FROM base AS builder
+ARG PROJECT
+
 WORKDIR /app
- 
+
+# Copy lockfile and package.json's of isolated subworkspace
+COPY --from=pruner /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
+COPY --from=pruner /app/out/pnpm-workspace.yaml ./pnpm-workspace.yaml
+COPY --from=pruner /app/out/json/ .
+
 # First install the dependencies (as they change less often)
-COPY .gitignore .gitignore
-COPY --from=builder /app/out/json/ .
-COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
-RUN pnpm install
- 
-# Build the project
-COPY --from=builder /app/out/full/ .
-RUN pnpm turbo run build --filter=admin...
- 
-FROM base AS runner
+RUN --mount=type=cache,id=pnpm,target=~/.pnpm-store pnpm install --frozen-lockfile
+
+# Copy source code of isolated subworkspace
+COPY --from=pruner /app/out/full/ .
+
+RUN turbo build --filter=${PROJECT}
+RUN --mount=type=cache,id=pnpm,target=~/.pnpm-store pnpm prune --prod --no-optional
+RUN rm -rf ./**/*/src
+
+
+# 4. Production dependencies
+FROM builder AS dependencies
+WORKDIR /app
+RUN pnpm --filter=$PROJECT deploy --prod --ignore-scripts --no-optional /dependencies
+
+# 5. Final image - runner stage to run the application
+FROM alpine AS runner
+ARG APP_DIRNAME
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 next
+USER next
+
 WORKDIR /app
 
 ENV NODE_ENV=development
- 
-# Don't run production as root
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-USER nextjs
- 
-COPY --from=installer /app/apps/admin/next.config.mjs .
-COPY --from=installer /app/apps/admin/package.json .
- 
+
+COPY --from=builder --chown=next:nodejs /app/apps/${APP_DIRNAME}/next.config.mjs .
+COPY --from=builder --chown=next:nodejs /app/apps/${APP_DIRNAME}/package.json .
+
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=installer --chown=nextjs:nodejs /app/apps/admin/.next/standalone ./
-COPY --from=installer --chown=nextjs:nodejs /app/apps/admin/.next/static ./apps/admin/.next/static
-COPY --from=installer --chown=nextjs:nodejs /app/apps/admin/public ./apps/admin/public
- 
-CMD node apps/admin/server.js
+COPY --from=builder --chown=next:nodejs /app/apps/${APP_DIRNAME}/.next/standalone ./
+COPY --from=builder --chown=next:nodejs /app/apps/${APP_DIRNAME}/.next/static ./.next/static
+COPY --from=dependencies --chown=remix:nodejs /dependencies/node_modules ./node_modules
+COPY --from=builder --chown=next:nodejs /app/apps/${APP_DIRNAME}/public ./public
+
+CMD ["node", "/app/apps/admin/server.js"]
