--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@apollo/client": "^3.9.5",
     "@apollo/experimental-nextjs-app-support": "^0.11.2",
     "@sentry/nextjs": "^7.105.0",
+    "@sentry/utils": "^8.33.1",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-next-experimental": "^5.51.23",
     "@vercel/speed-insights": "^1.0.11",
@@ -50,7 +51,8 @@
     "sharp": "^0.33.3",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.1",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "clsx": "^2.1.0"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.12",
@@ -83,7 +85,6 @@
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
     "autoprefixer": "^10.4.17",
-    "clsx": "^2.1.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.0",
@@ -108,5 +109,6 @@
   },
   "msw": {
     "workerDirectory": "public"
-  }
+  },
+  "packageManager": "pnpm@9.2.0"
 }
