--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,98 +18,92 @@
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
-    "@apollo/client": "^3.9.5",
-    "@apollo/experimental-nextjs-app-support": "^0.11.2",
+    "@apollo/client": "^3.13.6",
+    "@apollo/experimental-nextjs-app-support": "^0.11.11",
     "@next/third-parties": "^15.2.4",
-    "@sentry/nextjs": "^7.105.0",
-    "@sentry/utils": "^8.33.1",
-    "@tanstack/react-query": "^5.51.23",
-    "@tanstack/react-query-next-experimental": "^5.51.23",
-    "@vercel/speed-insights": "^1.0.11",
-    "class-variance-authority": "^0.7.0",
-    "classnames": "^2.5.1",
-    "clsx": "^2.1.0",
-    "critters": "^0.0.24",
-    "css-minimizer-webpack-plugin": "^7.0.0",
-    "dayjs": "^1.11.10",
-    "firebase": "^10.8.1",
-    "framer-motion": "^11.3.27",
-    "graphql": "^16.9.0",
-    "graphql-ws": "^5.15.0",
-    "jsonwebtoken": "^9.0.2",
+    "@sentry/nextjs": "^7.120.3",
+    "@sentry/utils": "^8.55.0",
+    "@tanstack/react-query": "^5.71.10",
+    "@tanstack/react-query-next-experimental": "^5.71.10",
+    "@vercel/speed-insights": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "critters": "^0.0.25",
+    "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.6.0",
+    "firebase": "^10.14.1",
+    "graphql": "^16.10.0",
+    "graphql-ws": "^5.16.2",
     "lodash": "^4.17.21",
-    "lottie-react": "2.4.0",
-    "mixpanel-browser": "^2.50.0",
-    "next": "^14.2.4",
-    "posthog-js": "^1.147.0",
-    "posthog-node": "^4.0.1",
+    "mixpanel-browser": "^2.63.0",
+    "motion": "^12.6.3",
+    "next": "^14.2.26",
+    "nuqs": "^2.4.1",
+    "posthog-js": "^1.234.9",
+    "posthog-node": "^4.11.1",
+    "radix-ui": "^1.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "^4.0.13",
-    "react-icons": "^5.0.1",
-    "react-intersection-observer": "^9.8.1",
+    "react-error-boundary": "^4.1.2",
+    "react-intersection-observer": "^9.16.0",
     "react-scroll": "1.9.0",
     "react-swipeable-views": "^0.14.0",
-    "react-tabs": "^6.0.2",
+    "react-tabs": "^6.1.0",
     "recoil": "^0.7.7",
-    "sharp": "^0.33.3",
-    "swiper": "^11.1.1",
-    "tailwind-merge": "^2.2.1",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "vaul": "^1.1.1"
+    "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar-hide": "^1.3.1",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
-    "@0no-co/graphqlsp": "^1.12.12",
-    "@graphql-codegen/cli": "^5.0.2",
+    "@0no-co/graphqlsp": "^1.12.16",
+    "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
     "@graphql-codegen/schema-ast": "^4.1.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@mswjs/http-middleware": "^0.9.2",
-    "@next/bundle-analyzer": "^15.2.3",
-    "@parcel/watcher": "^2.4.1",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
+    "@next/bundle-analyzer": "^15.2.4",
+    "@parcel/watcher": "^2.5.1",
+    "@storybook/addon-essentials": "^7.6.20",
+    "@storybook/addon-interactions": "^7.6.20",
+    "@storybook/addon-links": "^7.6.20",
     "@storybook/addon-onboarding": "^1.0.11",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/nextjs": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/test": "^7.6.17",
+    "@storybook/blocks": "^7.6.20",
+    "@storybook/nextjs": "^7.6.20",
+    "@storybook/react": "^7.6.20",
+    "@storybook/test": "^7.6.20",
     "@svgr/cli": "^8.1.0",
-    "@tanstack/react-query-devtools": "^5.51.23",
+    "@tanstack/react-query-devtools": "^5.71.10",
     "@types/express": "^4.17.21",
     "@types/gtag.js": "^0.0.19",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/lodash": "^4.14.202",
-    "@types/mixpanel-browser": "^2.49.0",
-    "@types/node": "^20.11.20",
-    "@types/react": "^18.2.58",
-    "@types/react-dom": "^18.2.19",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
+    "@types/mixpanel-browser": "^2.54.0",
+    "@types/node": "^20.17.30",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "@types/react-scroll": "^1.8.10",
-    "@types/react-swipeable-views": "^0.13.5",
+    "@types/react-swipeable-views": "^0.13.6",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-sort-class-members": "^1.20.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.26",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-sort-class-members": "^1.21.0",
     "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-unused-imports": "^4.1.3",
-    "express": "^4.18.2",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "msw": "^2.2.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "express": "^4.21.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
+    "msw": "^2.7.3",
     "next-pwa": "^5.6.0",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "storybook": "^7.6.17",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.3.3"
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "storybook": "^7.6.20",
+    "tailwindcss": "^3.4.17"
   },
   "msw": {
     "workerDirectory": "public"
