--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "turbo": "^2.0.1"
+    "turbo": "^2.0.1",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=v20.x.x"
