fix(web): wrap clientside page with suspense

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
     "generate:svg-component": "npx @svgr/cli --ignore-existing --jsx-runtime=automatic --out-dir src/components/common/icons --typescript -- src/assets/icons",
     "code-gen": "pnpm graphql-codegen --config codegen.ts",
     "build": "next build",
+    "build:turbo": "next build --turbopack",
     "start": "next start",
     "lint": "next lint --fix",
     "lint:check": "next lint",
@@ -27,6 +28,7 @@
     "@tanstack/react-query-next-experimental": "^5.71.10",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
+    "critters": "^0.0.25",
     "dayjs": "^1.11.13",
     "firebase": "^10.14.1",
     "graphql": "^16.10.0",
