chore: type and format

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -80,8 +80,8 @@
     "@types/lodash": "^4.17.16",
     "@types/mixpanel-browser": "^2.54.0",
     "@types/node": "^20.17.30",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/react-scroll": "^1.8.10",
     "@types/react-swipeable-views": "^0.13.6",
     "autoprefixer": "^10.4.21",
@@ -93,6 +93,8 @@
     "msw": "^2.7.3",
     "next-pwa": "^5.6.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "storybook": "^8.6.12",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
