--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -26,14 +26,16 @@
     "react-intersection-observer": "^9.10.3"
   },
   "devDependencies": {
-    "@jirum/prettier": "workspace:*",
     "@jirum/eslint-config-jirum": "workspace:*",
+    "@jirum/prettier": "workspace:*",
     "@jirum/tsconfig": "workspace:*",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.8.3"
   },
