--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,7 +49,7 @@
     "react-scroll": "^1.9.3",
     "react-tabs": "^6.1.0",
     "swiper": "^11.2.6",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar-hide": "^1.3.1",
     "vaul": "^1.1.2"
   },
@@ -86,6 +86,7 @@
     "@types/react-swipeable-views": "^0.13.6",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
+    "eslint": "^9.29.0",
     "eslint-plugin-storybook": "^0.10.0",
     "express": "^4.21.2",
     "husky": "^9.1.7",
