--- a/packages/eslint/package.json
+++ b/packages/eslint/package.json
@@ -1,15 +1,24 @@
 {
   "name": "@jirum/eslint-config-jirum",
   "version": "0.0.0",
-  "main": ".eslintrc.js",
+  "main": "eslint.config.mjs",
   "private": true,
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.29.0",
     "@jirum/tsconfig": "workspace:*",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^15.3.2",
+    "@next/eslint-plugin-next": "^15.3.3",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.3",
     "eslint-config-prettier": "^10.1.3",
     "eslint-config-turbo": "^2.5.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-storybook": "^0.10.0"
+    "eslint-plugin-import-x": "^4.15.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-storybook": "^0.10.2",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.1"
   }
 }
