chore: 설정 정리(tsconfig/eslint/next config 등) 및 타 패키지 반영
update tsconfigs, eslint config; minor next/package.json tweaks; landing/admin tsconfig sync

--- a/apps/landing/tsconfig.json
+++ b/apps/landing/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@jirum/tsconfig/tsconfig.json",
+  "extends": "@jirum/tsconfig/nextjs.json",
   "compilerOptions": {
     "jsx": "preserve",
     "plugins": [
