--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@jirum/tsconfig",
   "version": "0.0.0",
-  "exports": {
-    "./tsconfig.json": "./tsconfig.json"
-  },
-  "private": true
+  "private": true,
+  "publishConfig": {
+    "access": "public"
+  }
 }
