feat(workflow): 스테이징 수동배포 설정

--- a/.github/workflows/deploy-web-staging.yml
+++ b/.github/workflows/deploy-web-staging.yml
@@ -6,6 +6,11 @@ on:
       - "main"
     paths:
       - "apps/web/**"
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'select branch to deploy to staging'
+        required: true
 
 jobs:
   job_deploy_staging:
